<resources>
    <string name="edit_button_lbl">Edit</string>
    <string name="name_dummy_txt">FirstName LastName</string>
    <string name="email_hint">email@url.com</string>
    <string name="email_lbl">Email:</string>

    <string name="app_name">CO2 Emission</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done_button_txt">Done</string>
    <string name="name_hint">FirstName LastName</string>
</resources>
