<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.scu.databaseexample.MainActivity">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/edit_button_lbl" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_button"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/name_dummy_txt"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email_label"
        android:layout_alignBottom="@+id/email_label"
        android:layout_alignStart="@+id/edit_button"
        android:text="@string/email_hint" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_view"
        android:layout_below="@+id/name_view"
        android:layout_marginTop="13dp"
        android:text="@string/email_lbl" />
</RelativeLayout>
