<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.scu.databaseexample.MainActivity">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/done_button_txt" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="@dimen/name_field_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/submit_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20px"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_edit"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="24dp"
        android:text="@string/email_lbl" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="@dimen/longer_field_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email_label"
        android:layout_alignBottom="@+id/email_label"
        android:layout_marginStart="50dp"
        android:layout_alignStart="@+id/email_label"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

</RelativeLayout>
